Sunday Weekend, weekly recaps week 4, updated home page.

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <!-- Add Week 03, Week 04 etc. the same way -->
          <!-- Week 04 -->
         <div class="snapshot-week" data-sweek="2025-12-28">
-          <h4 class="snapshot-week-title">Week 03</h4>
+          <h4 class="snapshot-week-title">Week 04</h4>
           <table class="snapshot-table">
             <tbody>
               <tr>
@@ -299,7 +299,7 @@
               <tr>
                 <tr class="zone-3">
                   <td>Zone 3</td>
-                <td>06 min</td>
+                <td>106 min</td>
               </tr>
               <tr>
                 <tr class="zone-4">
@@ -326,6 +326,60 @@
       <tr>
         <td><strong>VO₂ Max</strong></td>
         <td>44.7 → 45.2</td>
+      </tr>
+      <tr>
+        <td><strong>DOMS</strong></td>
+        <td>Zero</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
+
+  <!-- Week 05 -->
+        <div class="snapshot-week" data-sweek="2026-1-4">
+          <h4 class="snapshot-week-title">Week 05</h4>
+          <table class="snapshot-table">
+            <tbody>
+              <tr>
+                <tr class="zone-1">
+                  <td>Zone 1</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                 <tr class="zone-2">
+                  <td>Zone 2</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-3">
+                  <td>Zone 3</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-4">
+                  <td>Zone 4</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-5">
+                  <td>Zone 5</td>
+                <td>0 min</td>
+              </tr>
+            </tbody>
+          </table>
+<table class="snapshot-table">
+    <tbody>
+      <tr>
+        <td><strong>Total Training Time</strong></td>
+        <td>0h 0m</td>
+      </tr>
+      <tr>
+        <td><strong>Total Miles</strong></td>
+        <td>0 miles</td>
+      </tr>
+      <tr>
+        <td><strong>VO₂ Max</strong></td>
+        <td>45.2 → 45.2</td>
       </tr>
       <tr>
         <td><strong>DOMS</strong></td>
@@ -423,7 +477,7 @@
   <div class="card-tag">Video</div>
   <h3 class="card-title">Latest weekly recap video</h3>
   <div class="video-embed">
-    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/7b70d913-9248-4970-9122-f16eb3977ce1" loading="lazy" title="Synthesia video player - Hyrox Week03 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/902d9bcb-23e5-4b15-afa2-a2c06c9f8331" loading="lazy" title="Synthesia video player - Hyrox Week 4 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
   </div>
 
   
@@ -486,7 +540,8 @@
 
         // Training Snapshot selector (defaults to latest week; does NOT affect "This week at a glance")
         const SNAPSHOT_WEEKS = [
-        { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28)", default: true }, 
+        { key: "2026-1-4", label: "Week 05 (Dec 29 – Jan 4)", default: true }, 
+        { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28)" }, 
         { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21)" },  
         { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14)" },
         { key: "2025-12-07", label: "Week 01 (Dec 1 – Dec 7)" }
