--- a/weekly-recaps.html
+++ b/weekly-recaps.html
@@ -93,7 +93,59 @@
         <section class="section">
           <div class="recap-list">
 
-            <!-- ====== WEEK 03 CARD (LATEST) ====== -->
+            <!-- ====== WEEK 04 CARD (LATEST) ====== -->
+            <article class="recap-card" data-week="2025-12-28">
+              <div class="recap-meta">Week 04 · Dec 22 – Dec 28, 2025</div>
+              <h2 class="recap-title">Building fitness without borrowing from the future </h2>
+
+              <div class="recap-columns">
+                <div class="recap-text">
+                  <p>
+                   Week 4 was about: increasing volume without increasing stress. Training time and mileage went up, intensity stayed controlled, and recovery remained intact — even through the holiday schedule. 
+                   The focus shifted toward aerobic density, race-relevant pacing, and disciplined zone control. High-intensity efforts were minimized, Zone 3 work increased, and VO₂ max continued to rise without accumulating fatigue. 
+                   This was a week that prioritized durability, execution, and repeatability — setting the foundation to sharpen performance with four weeks left until race day.
+                  </p>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Reflection</div>
+                    <p class="card-body">
+                     <ul class="recap-wins">
+                      <li>Precision over volume</li>
+                      <li>Race pace over general effort</li>
+                      <li>Strength maintenance, not overload</li>
+                      <li>Recovery quality stays non-negotiable</li>
+                      <li>Minimal soreness and no missed sessions, despite the holidays</li>
+                      <li>we’re no longer “building fitness” — we’re shaping it</li>
+                    </ul>
+                    </p>
+                  </div>
+
+                  <div class="recap-keypoints">
+                    <strong>Key metrics:</strong><br>
+                    • Total time: 10h 13m · 25.83 Total miles: <br>
+                    • HR Zones: Z1 388.5m ·59.25 Z2 m · Z3 106m · Z4 44m · Z5 0.5m<br>
+                    • VO₂ Max: 44.7 → 45.2 · DOMS: Zero<br>
+                    • Theme: HYROX pace intervals, shorter sharper sessions, strength maintenance, and high-quality recovery (4 weeks to race day)
+                  </div>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Week 05 Focus</div>
+                    <p class="card-body">
+                    Week 5 shifts the focus to sharpening race execution — precise pacing, controlled intensity, and staying fresh with four weeks to race day.
+                    </p>
+                  </div>
+
+                  <div class="video-embed" style="margin-top: 12px;">
+                    <!-- Paste Synthesia Week 03 embed iframe below when ready -->
+                    <div class="video-embed">
+                       <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/902d9bcb-23e5-4b15-afa2-a2c06c9f8331" loading="lazy" title="Synthesia video player - Hyrox Week 4 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+                    </div>
+                </div>
+              </div>
+            </article>
+            <!-- ====== END WEEK 04 ====== -->
+            
+            <!-- ====== WEEK 03 CARD ====== -->
             <article class="recap-card" data-week="2025-12-21">
               <div class="recap-meta">Week 03 · Dec 15 – Dec 21, 2025</div>
               <h2 class="recap-title">Building Volume Without Breaking</h2>
@@ -262,7 +314,8 @@ The result was a week that didn’t look dramatic on paper, but quietly moved th
 
         // Week selector logic
         const RECAP_WEEKS = [
-          { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21, 2025)", default: true },
+          { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28, 2025)", default: true },
+          { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21, 2025)" },
           { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14, 2025)" },
           { key: "2025-12-07", label: "Week 01 (Dec 1 – Dec 7, 2025)" }
         ];
