--- a/index.html
+++ b/index.html
@@ -343,22 +343,22 @@
               <tr>
                 <tr class="zone-1">
                   <td>Zone 1</td>
-                <td>150.25 min</td>
+                <td>231 min</td>
               </tr>
               <tr>
                  <tr class="zone-2">
                   <td>Zone 2</td>
-                <td>25.25 min</td>
+                <td>29 min</td>
               </tr>
               <tr>
                 <tr class="zone-3">
                   <td>Zone 3</td>
-                <td>50 min</td>
+                <td>56 min</td>
               </tr>
               <tr>
                 <tr class="zone-4">
                   <td>Zone 4</td>
-                <td>17.5 min</td>
+                <td>21.65 min</td>
               </tr>
               <tr>
                 <tr class="zone-5">
@@ -371,11 +371,11 @@
     <tbody>
       <tr>
         <td><strong>Total Training Time</strong></td>
-        <td>4h 03m</td>
+        <td>5h 38m</td>
       </tr>
       <tr>
         <td><strong>Total Miles</strong></td>
-        <td>12.34 miles</td>
+        <td>15.16 miles</td>
       </tr>
       <tr>
         <td><strong>VO₂ Max</strong></td>
@@ -383,7 +383,7 @@
       </tr>
       <tr>
         <td><strong>DOMS</strong></td>
-        <td>Zero</td>
+        <td>One</td>
       </tr>
     </tbody>
   </table>
