--- a/workouts.html
+++ b/workouts.html
@@ -772,7 +772,352 @@
 </div>
 </article>  
  <!-- Sunday 1/4/26 – example with one card for today -->
-    
+ <article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Sunday – 05</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
+
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 5.5 hrs · Score 71</li>
+<li><strong>HRV:</strong> 89 ms · <strong>Resting HR:</strong> 52 bpm</li>
+<li><strong>VO₂ Max:</strong> 44</li>
+<li><strong>Weight:</strong> 176.9 lb · 12.3% BF · Lean Mass 142.2 lb</li>
+<li><strong>DOMS:</strong> 1 · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2356 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Morning Stretch</span>
+<span class="session-meta">15 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Periformis stretch</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Hamstring stretch</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 second hold each set</td>
+</tr>
+<tr>
+<td>Calf Stretch</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>15 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk / Jog</span>
+<span class="session-meta">45 min · 2.82 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk / Jog</td>
+<td>-</td>
+<td>45 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>45 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Hyrox Controlled Zone</span>
+<span class="session-meta">14.65 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 3</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>SkiERG</td>
+<td>1 × 1</td>
+<td>4.3 sec</td>
+<td>Both</td>
+<td>SKiERG</td>
+<td>4:20 1000 Meters</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>1 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 second rest</td>
+</tr>
+<tr>
+<td>Rower</td>
+<td>1 × 1</td>
+<td>4.2 sec</td>
+<td>Both</td>
+<td>Rower</td>
+<td>4:12 1000 Meters</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>1 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 second rest</td>
+</tr>
+<tr>
+<td>Lunges </td>
+<td>1 × 1 @ 45 lb</td>
+<td>4.15 sec</td>
+<td>Alternating</td>
+<td>-</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0.75 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>3.75 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>6 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>4.15 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
+  <!-- end WEEK 5 Workouts -->
 </div>
 </section>
 </div> <!-- end WEEK 5 -->
