--- a/weekly-recaps.html
+++ b/weekly-recaps.html
@@ -93,7 +93,59 @@
         <section class="section">
           <div class="recap-list">
 
-            <!-- ====== WEEK 04 CARD (LATEST) ====== -->
+            <!-- ====== WEEK 05 CARD (LATEST) ====== -->
+            <article class="recap-card" data-week="2026-1-4">
+              <div class="recap-meta">Week 05 · Dec 29, 2025 – Jan 4, 2026</div>
+              <h2 class="recap-title">Absorb · Reset · Re-Engage</h2>
+
+              <div class="recap-columns">
+                <div class="recap-text">
+                  <p>
+                   Week 5 was about: absorbing the work already done and resetting after extended holiday travel. Training volume and intensity were intentionally lower, routine was disrupted, and recovery became the priority.
+                  This was the lightest training week since Week 1, not because fitness was lost, but because fatigue needed to clear. Reduced mileage, less time in higher heart rate zones, and a temporary dip in VO₂ max are expected outcomes during a recovery-dominant week — especially after travel and time off.
+                  With 20 days to race day, this week served its purpose: restore readiness, reduce accumulated stress, and prepare the body to re-engage with precision in the final training block.
+                  </p>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Reflection</div>
+                    <p class="card-body">
+                     <ul class="recap-wins">
+                      <li>Extended holiday travel disrupted normal training and recovery routines</li>
+                      <li>Muscle tension and soreness surfaced that were not present before travel</li>
+                      <li>A shin cramp appeared on the first run back — walking instead of running would have been the smarter re-entry</li>
+                      <li>Professional stretching significantly improved recovery and HRV</li>
+                      <li>Extra care and time from the stretch therapist made a noticeable difference</li>
+                      <li>Week 5 functioned as a reset, not a setback, with readiness improving by week’s end</li>
+                    </ul>
+                    </p>
+                  </div>
+
+                  <div class="recap-keypoints">
+                    <strong>Key metrics:</strong><br>
+                    • Total time: 5h 38m · 15.16 Total miles: <br>
+                    • HR Zones: Z1 231m ·Z2 29m · Z3 56m · Z4 21.65m · Z5 0m<br>
+                    • VO₂ Max: 45.2 → 42.8 · DOMS: One<br>
+                    • Theme: HYROX pace intervals, shorter sharper sessions, strength maintenance, and high-quality recovery (3 weeks to race day)
+                  </div>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Week 06 Focus</div>
+                    <p class="card-body">
+                    Week 6 is about precision — dialing in race pace, sharpening execution, and rebuilding volume with intent.
+                    </p>
+                  </div>
+
+                  <div class="video-embed" style="margin-top: 12px;">
+                    <!-- Paste Synthesia Week 05 embed iframe below when ready -->
+                    <div class="video-embed">
+                      <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/2b3a294f-6c01-445c-a391-c93b35f84f70" loading="lazy" title="Synthesia video player - Hyrox Week 5 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+                    </div>
+                </div>
+              </div>
+            </article>
+            <!-- ====== END WEEK 05 ====== -->
+           
+            <!-- ====== WEEK 04 CARD  ====== -->
             <article class="recap-card" data-week="2025-12-28">
               <div class="recap-meta">Week 04 · Dec 22 – Dec 28, 2025</div>
               <h2 class="recap-title">Building fitness without borrowing from the future </h2>
@@ -314,7 +366,8 @@ The result was a week that didn’t look dramatic on paper, but quietly moved th
 
         // Week selector logic
         const RECAP_WEEKS = [
-          { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28, 2025)", default: true },
+          { key: "2026-1-4", label: "Week 05 (Dec 29, 2025 – Jan 4, 2026)", default: true },  
+          { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28, 2025)" },
           { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21, 2025)" },
           { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14, 2025)" },
           { key: "2025-12-07", label: "Week 01 (Dec 1 – Dec 7, 2025)" }
