--- a/index.html
+++ b/index.html
@@ -379,7 +379,61 @@
       </tr>
       <tr>
         <td><strong>VO₂ Max</strong></td>
-        <td>45.2 → 44.2</td>
+        <td>45.2 → 42.8</td>
+      </tr>
+      <tr>
+        <td><strong>DOMS</strong></td>
+        <td>One</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
+
+  <!-- Week 06 -->
+        <div class="snapshot-week" data-sweek="2026-1-11">
+          <h4 class="snapshot-week-title">Week 06</h4>
+          <table class="snapshot-table">
+            <tbody>
+              <tr>
+                <tr class="zone-1">
+                  <td>Zone 1</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                 <tr class="zone-2">
+                  <td>Zone 2</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-3">
+                  <td>Zone 3</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-4">
+                  <td>Zone 4</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-5">
+                  <td>Zone 5</td>
+                <td>0 min</td>
+              </tr>
+            </tbody>
+          </table>
+<table class="snapshot-table">
+    <tbody>
+      <tr>
+        <td><strong>Total Training Time</strong></td>
+        <td>0h 0m</td>
+      </tr>
+      <tr>
+        <td><strong>Total Miles</strong></td>
+        <td>0 miles</td>
+      </tr>
+      <tr>
+        <td><strong>VO₂ Max</strong></td>
+        <td>42.8 → 42.8</td>
       </tr>
       <tr>
         <td><strong>DOMS</strong></td>
@@ -393,6 +447,38 @@
     </article>
   </aside>
 </section>
+
+        <!-- Holiday Travel Badge (NEW • clicks through to latest Journey Insight) -->
+<a href="journey-insights.html#insight-travel-recovery" class="holiday-badge-link">
+  <section class="winter-badge holiday-badge">
+    <img
+      src="assets/img/Holiday-Travel-Badge.png"
+      alt="HYROX Holiday Travel Badge – Navigating the Recovery Debt"
+      class="winter-badge-img"
+    />
+
+    <div class="winter-badge-text">
+      <div class="kicker">
+        HOLIDAY TRAVEL • NEW INSIGHT (Click the badge to visit the winter training protocol)
+        <span class="new-pill">NEW</span>
+      </div>
+
+      <h3>Navigating the Recovery Debt</h3>
+
+      <p>
+        Travel weeks revealed a critical lesson: fitness isn’t lost on the road — it’s lost when recovery
+        debt goes unmanaged. Flights, poor sleep, long days, and time shifts require tighter training control,
+        not harder workouts.
+      </p>
+
+      <ul class="badge-list">
+        <li><strong>Learned during:</strong> holiday travel, disrupted sleep, compressed schedules.</li>
+        <li><strong>Focus:</strong> protecting readiness, aerobic capacity, and nervous system balance.</li>
+        <li><strong>Outcome:</strong> arrive home ready to train — not needing a recovery reset week.</li>
+      </ul>
+    </div>
+  </section>
+</a>
 
         <!-- Winter Training Badge (clicks through to Journey Insights) -->
 <a href="journey-insights.html#insight-winter-protocol" class="winter-badge-link">
@@ -477,7 +563,7 @@
   <div class="card-tag">Video</div>
   <h3 class="card-title">Latest weekly recap video</h3>
   <div class="video-embed">
-    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/902d9bcb-23e5-4b15-afa2-a2c06c9f8331" loading="lazy" title="Synthesia video player - Hyrox Week 4 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/2b3a294f-6c01-445c-a391-c93b35f84f70" loading="lazy" title="Synthesia video player - Hyrox Week 5 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
   </div>
 
   
@@ -540,7 +626,8 @@
 
         // Training Snapshot selector (defaults to latest week; does NOT affect "This week at a glance")
         const SNAPSHOT_WEEKS = [
-        { key: "2026-1-4", label: "Week 05 (Dec 29 – Jan 4)", default: true }, 
+        { key: "2026-1-11", label: "Week 06 (Jan 5 – Jan 11)", default: true }, 
+        { key: "2026-1-4", label: "Week 05 (Dec 29 – Jan 4)" }, 
         { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28)" }, 
         { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21)" },  
         { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14)" },
