--- a/workouts.html
+++ b/workouts.html
@@ -53,6 +53,7 @@
             <label for="weekSelect">Select week:</label>
             <select id="weekSelect">
               <!-- You can hard-code at first, or later populate dynamically -->
+              <option value="2026-1-5">Week 06 (Jan 5 – Jan 11)</option>
               <option value="2025-12-29">Week 05 (Dec 29 – Jan 4)</option>
               <option value="2025-12-22">Week 04 (Dec 22 – Dec 28)</option>
               <option value="2025-12-15">Week 03 (Dec 15 – Dec 21)</option>
@@ -62,6 +63,85 @@
             </select>
           </div>
         </section>
+
+
+<!-- WEEK 6 (example: Jan 5 – Jan 11, 2026) -->
+<div class="week-log" data-week="2026-1-5">
+
+  <!-- Morning Readiness – Week 6 -->
+  <section class="dashboard-section">
+    <h2 class="section-title">Morning Readiness</h2>
+    <p class="section-subtitle">
+      HRV, resting HR, sleep, and body metrics that guide how hard to push this week.
+    </p>
+
+       <div class="readiness-grid">
+            <article class="card">
+              <div class="card-tag">Metrics</div>
+              <h3 class="card-title">Body composition / Body pod</h3>
+              <p class="card-body">
+                Screenshot or summary of body composition trends for the selected week.
+              </p>
+              <div class="metric-image-frame">
+  <img src="assets/img/BodyPod-Week6.jpg" alt="Body Pod Week 6">
+</div>
+</article>
+      <!-- Welltory card -->
+      <article class="card">
+              <div class="card-tag">Metrics</div>
+              <h3 class="card-title">Welltory</h3>
+              <p class="card-body">
+                HRV, stress, and readiness from Welltory that guide intensity for the day.
+              </p>
+              <div class="metric-image-frame">
+  <img src="assets/img/Welltory-Week6.jpg" alt="Welltory week 6">
+</div>
+</article>
+
+      <!-- Ultrahuman card -->
+       <article class="card">
+              <div class="card-tag">Metrics</div>
+              <h3 class="card-title">Ultrahuman Ring</h3>
+              <p class="card-body">
+                VO2 Max, HRV, and resting heart rate metrics that inform how aggressive the session should be.
+              </p>
+          <div class="metric-image-frame">
+            <img src="assets/img/Vo2max-week6.jpg" alt="Ultrahuman week 6">
+          </div>
+          <div class="metric-image-frame">
+            <img src="assets/img/Ultrahuman-week6.jpg" alt="Ultrahuman week 6">
+</div>
+</article>
+    </div>
+  </section>
+
+ <!-- Daily Workout Log – Week 6 -->
+  <section class="dashboard-section">
+    <h2 class="section-title">Daily Workout Log</h2>
+    <p class="section-subtitle">
+      Week 6 – each day with sessions, distances, and primary zone focus.
+    </p>
+
+    <div class="week-days">
+      
+<!-- Monday 1/5/26 – example with one card for today -->
+
+<!-- Tuesday 1/6/26 – example with one card for today -->
+
+<!-- Wednesday 1/7/26 – example with one card for today -->
+
+<!-- Thursday 1/8/26 – example with one card for today -->
+ 
+<!-- Friday 1/9/26 – example with one card for today -->
+ 
+<!-- Saturday 1/10/26 – example with one card for today -->
+   
+<!-- Sunday 1/11/26 – example with one card for today -->
+ 
+<!-- end WEEK 6 Workouts -->
+</div>
+</section>
+</div> <!-- end WEEK 6 -->
 
 <!-- WEEK 5 (example: Dec 29 – Jan 4, 2026) -->
 <div class="week-log" data-week="2025-12-29">
@@ -101,7 +181,7 @@
               <div class="card-tag">Metrics</div>
               <h3 class="card-title">Ultrahuman Ring</h3>
               <p class="card-body">
-                VI2 Max, HRV, and resting heart rate metrics that inform how aggressive the session should be.
+                VO2 Max, HRV, and resting heart rate metrics that inform how aggressive the session should be.
               </p>
               <div class="metric-image-frame">
             <img src="assets/img/Ultrahuman-week5.png" alt="Ultrahuman week 5">
@@ -1160,7 +1240,7 @@
               <div class="card-tag">Metrics</div>
               <h3 class="card-title">Ultrahuman Ring</h3>
               <p class="card-body">
-                VI2 Max, HRV, and resting heart rate metrics that inform how aggressive the session should be.
+                VO2 Max, HRV, and resting heart rate metrics that inform how aggressive the session should be.
               </p>
               <div class="metric-image-frame">
             <img src="assets/img/Stats-Week4.png" alt="Ultrahuman week 4">
