--- a/index.html
+++ b/index.html
@@ -397,22 +397,22 @@
               <tr>
                 <tr class="zone-1">
                   <td>Zone 1</td>
-                <td>0 min</td>
+                <td>64.5 min</td>
               </tr>
               <tr>
                  <tr class="zone-2">
                   <td>Zone 2</td>
-                <td>0 min</td>
+                <td>32.5 min</td>
               </tr>
               <tr>
                 <tr class="zone-3">
                   <td>Zone 3</td>
-                <td>0 min</td>
+                <td>21.75 min</td>
               </tr>
               <tr>
                 <tr class="zone-4">
                   <td>Zone 4</td>
-                <td>0 min</td>
+                <td>3.5 min</td>
               </tr>
               <tr>
                 <tr class="zone-5">
@@ -425,11 +425,11 @@
     <tbody>
       <tr>
         <td><strong>Total Training Time</strong></td>
-        <td>0h 0m</td>
+        <td>02h 2m</td>
       </tr>
       <tr>
         <td><strong>Total Miles</strong></td>
-        <td>0 miles</td>
+        <td>03.94 miles</td>
       </tr>
       <tr>
         <td><strong>VO₂ Max</strong></td>
@@ -437,7 +437,7 @@
       </tr>
       <tr>
         <td><strong>DOMS</strong></td>
-        <td>One</td>
+        <td>One Tibialias Anterior knot / cramp Left Leg</td>
       </tr>
     </tbody>
   </table>
