--- a/workouts.html
+++ b/workouts.html
@@ -125,7 +125,679 @@
     <div class="week-days">
       
 <!-- Monday 1/5/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Monday – 06</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 7 hrs · Score 71</li>
+<li><strong>HRV:</strong> 63 ms · <strong>Resting HR:</strong> 53 bpm</li>
+<li><strong>VO₂ Max:</strong> 42.8</li>
+<li><strong>Weight:</strong> 177.4 lb · 12.3% BF · Lean Mass 141.9 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2280 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk / Jog</span>
+<span class="session-meta">10 min · 0.64 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk / Jog</td>
+<td>-</td>
+<td>10 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>10 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Run</span>
+<span class="session-meta">6 min · 0.83 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 3</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Run</td>
+<td>-</td>
+<td>6 min</td>
+<td>-</td>
+<td>Raise VO2 Max session</td>
+<td>Tibialias Anterior strain</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0.25 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>5.25 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk / Jog</span>
+<span class="session-meta">10 min · 0.67 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk / Jog</td>
+<td>-</td>
+<td>10 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>10 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Run</span>
+<span class="session-meta">20.25 min · 1.8 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 2</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Run</td>
+<td>-</td>
+<td>20.25 min</td>
+<td>-</td>
+<td>Raise VO2 Max session</td>
+<td>Tibialias Anterior strain</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>11.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>5.25 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>3.5 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Midday stretch</span>
+<span class="session-meta">15 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Periformis stretch</td>
+<td>2 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Hamstring stretch</td>
+<td>2 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 second hold each set</td>
+</tr>
+<tr>
+<td>Calf Stretch</td>
+<td>2 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Tibialias Anterior Stretch</td>
+<td>2 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Tibialias / calves Roller</td>
+<td>2 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>15 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Hyrox Controlled Zone</span>
+<span class="session-meta">8 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 2</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Farmers Carry</td>
+<td>1 × 1 @ 55 lb</td>
+<td>135 sec</td>
+<td>Both</td>
+<td>Wall Ball</td>
+<td>2:15 controlled with comp weight</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 second rest</td>
+</tr>
+<tr>
+<td>Wall Ball</td>
+<td>1 × 100 @ 15 lb</td>
+<td>285 sec</td>
+<td>Both</td>
+<td>Wall Ball</td>
+<td>4:45 slow controlled with comp weight</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>2.25 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>3.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>2.25 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Tonal Chest and Arms</span>
+<span class="session-meta">33 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 2</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Barbell Chinup</td>
+<td>3 × 10 @ 85 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Tonal Kneeling </td>
+</tr>
+<tr>
+<td>Barbell Bench Press</td>
+<td>3 × 10 @ 120 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Tonal Bench Press</td>
+</tr>
+<tr>
+<td>Barbell Front Raise</td>
+<td>3 × 10 @ 30 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Tonal Front Shoulder Raise</td>
+</tr>
+<tr>
+<td>Barbell Biceps Curl</td>
+<td>3 × 10 @ 60 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Tonal Standing Barbell curl</td>
+</tr>
+<tr>
+<td>Bench Chest Fly</td>
+<td>3 × 10 @ 20 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Tonal Handle Flys</td>
+</tr>
+<tr>
+<td>Seated Bicep Curl</td>
+<td>3 × 16 @ 20 lb</td>
+<td>240 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>Tonal seated handle curls</td>
+</tr>
+<tr>
+<td>Lateral Raise</td>
+<td>3 × 10 @ 10 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Tonal Standing Lateral Shoulder Raise</td>
+</tr>
+<tr>
+<td>Triceps Kickback</td>
+<td>3 × 10 @ 18 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Tonal Hinged Kickback</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>7 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>17 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>9 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Tuesday 1/6/26 – example with one card for today -->
 
 <!-- Wednesday 1/7/26 – example with one card for today -->
