-Tuesday week6 workouts

--- a/workouts.html
+++ b/workouts.html
@@ -799,7 +799,327 @@
 </div>
 </article>
 <!-- Tuesday 1/6/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Tuesday – 06</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 6.75 hrs · Score 71</li>
+<li><strong>HRV:</strong> 58 ms · <strong>Resting HR:</strong> 50 bpm</li>
+<li><strong>VO₂ Max:</strong> 43.2</li>
+<li><strong>Weight:</strong> 176.9 lb · 12.5% BF · Lean Mass 141.7 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 6 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 6 / 10</li>
+<li><strong>BCE:</strong> 2280 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Cycle</span>
+<span class="session-meta">18.5 min · 3.25 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 3</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Cycle</td>
+<td>-</td>
+<td>18.5 min</td>
+<td>-</td>
+<td>No</td>
+<td>Raise VO2 Max session</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>2.5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>3.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>9.5 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>3 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk</span>
+<span class="session-meta">21 min · 1.37 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk</td>
+<td>-</td>
+<td>21 min</td>
+<td>-</td>
+<td>Zone 1 Endurance</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>10.5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>10.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Hyrox Controlled Zone</span>
+<span class="session-meta">15 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 3</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>SkiERG</td>
+<td>3 × 1 @ 4 lb</td>
+<td>420 sec</td>
+<td>Both</td>
+<td>SKiERG</td>
+<td>2:20 per 500 meters x 3</td>
+</tr>
+<tr>
+<td>Farmers Carry</td>
+<td>3 × 1 @ 55 lb</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Farmers Carry</td>
+<td>25 meters 30 seconds x 3</td>
+</tr>
+<tr>
+<td>Wall Ball</td>
+<td>3 × 15 @ 15 lb</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Wall Ball</td>
+<td>15 reps in less than 40 seconds x 3</td>
+</tr>
+<tr>
+<td>Lunges </td>
+<td>3 × 20 @ 45 lb</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Lunges</td>
+<td>10 lunges per leg in 60 seconds x 3</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>1.5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>2.25 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>11.25 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>No</td>
+<td>Recovery Raising HRV</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Wednesday 1/7/26 – example with one card for today -->
 
 <!-- Thursday 1/8/26 – example with one card for today -->
