-Wednesday week6 workouts

--- a/workouts.html
+++ b/workouts.html
@@ -1121,7 +1121,291 @@
 </div>
 </article>
 <!-- Wednesday 1/7/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Wednesday – 06</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 7.75 hrs · Score 80</li>
+<li><strong>HRV:</strong> 70 ms · <strong>Resting HR:</strong> 47 bpm</li>
+<li><strong>VO₂ Max:</strong> 44.1</li>
+<li><strong>Weight:</strong> 176.9 lb · 12.5% BF · Lean Mass 141.7 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2280 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Hyrox Techinque </span>
+<span class="session-meta">60 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>SkiERG</td>
+<td>1 × 1 @ 4 lb</td>
+<td>125 sec</td>
+<td>Both</td>
+<td>SKiERG</td>
+<td>2:05 per 500 meters</td>
+</tr>
+<tr>
+<td>Farmers Carry</td>
+<td>2 × 1 @ 55 lb</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Farmers Carry</td>
+<td>50 meters 60 seconds </td>
+</tr>
+<tr>
+<td>Wall Ball</td>
+<td>3 × 20 @ 15 lb</td>
+<td>300 sec</td>
+<td>Both</td>
+<td>Wall Ball</td>
+<td>20 reps in less than 60 seconds x 3</td>
+</tr>
+<tr>
+<td>Lunges </td>
+<td>1 × 40 @ 45 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Lunges</td>
+<td>20 lunges per leg in</td>
+</tr>
+<tr>
+<td>Sled Push</td>
+<td>4 × 1 @ 250 lb</td>
+<td>180 sec</td>
+<td>Both</td>
+<td>Sled Push</td>
+<td>12.5 Meters x 4</td>
+</tr>
+<tr>
+<td>Sled Pull</td>
+<td>4 × 1 @ 250 lb</td>
+<td>320 sec</td>
+<td>Both</td>
+<td>Sled Pull</td>
+<td>12.5 Meters x 4</td>
+</tr>
+<tr>
+<td>Rower</td>
+<td>1 × 1 @ 4 lb</td>
+<td>135 sec</td>
+<td>Both</td>
+<td>Rower</td>
+<td>2:15 per 500 meters</td>
+</tr>
+<tr>
+<td>Burpee Broad Jumps</td>
+<td>1 × 25</td>
+<td>180 sec</td>
+<td>Both</td>
+<td>Burpee Broad Jump</td>
+<td>40 meters</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>21 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>17 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>19.75 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>2.25 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk</span>
+<span class="session-meta">20 min · 1.42 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>Zone 1 Endurance</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>12.25 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>7.75 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>No</td>
+<td>Recovery Raising HRV</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Thursday 1/8/26 – example with one card for today -->
  
 <!-- Friday 1/9/26 – example with one card for today -->
