New Community story

--- a/community.html
+++ b/community.html
@@ -107,6 +107,22 @@
             </article>
 
             <!-- Add more cards as you receive responses -->
+<article class="card">
+      <div class="card-tag">Story</div>
+      <h3 class="card-title">“Scaled the Work, Got Results” – Jim</h3>
+      <p class="card-body">
+        Jeff, your site has been incredibly inspiring. The data and transparency you share are fascinating and
+        motivating. While I can’t keep up with every workout exactly as written, I follow the same structure —
+        using lighter weights and longer time — and it’s made a real difference.
+        <br /><br />
+        In just four weeks, I’ve lost 15 pounds and feel stronger and more consistent than I have in years.
+        Thank you for sharing your journey — it’s helping others start their own.
+      </p>
+      <p class="card-body" style="margin-top: 12px; opacity: 0.85;">
+        — Jim, 54 | Atlanta, GA
+      </p>
+    </article>
+
           </div>
         </section>
 
