--- a/weekly-recaps.html
+++ b/weekly-recaps.html
@@ -93,7 +93,57 @@
         <section class="section">
           <div class="recap-list">
 
-            <!-- ====== WEEK 05 CARD (LATEST) ====== -->
+             <!-- ====== WEEK 06 CARD (LATEST) ====== -->
+            <article class="recap-card" data-week="2026-1-11">
+              <div class="recap-meta">Week 06 · Jan 5 – Jan 11, 2026</div>
+              <h2 class="recap-title">Rebuild Precision</h2>
+
+              <div class="recap-columns">
+                <div class="recap-text">
+                  <p>
+                   Week 6 was about re-establishing structure, sharpening execution, and confirming readiness as race day approaches. After the lighter recovery-focused Week 5, training volume increased, race-relevant work returned, and VO₂ max rebounded strongly — all without accumulating excess fatigue. The focus stayed on disciplined pacing, controlled effort, and trusting the coaching plan even when run times or readiness felt uncertain. By the end of the week, the data confirmed what the process intended: fitness responded quickly, confidence returned, and the body is prepared to shift into the final taper with 13 days remaining until race day.
+                  </p>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Reflection</div>
+                    <p class="card-body">
+                     <ul class="recap-wins">
+                      <li>Miles: 19.14 (↑ from 15.16)</li>
+                      <li>Zone 3: Increased</li>
+                      <li>Zone 4: About the same</li>
+                      <li>VO₂ max: 42.8 → 45.4 (strong rebound)</li>
+                      <li>Precision over effort</li>
+                      <li>Pacing discipline</li>
+                    </ul>
+                    </p>
+                  </div>
+
+                  <div class="recap-keypoints">
+                    <strong>Key metrics:</strong><br>
+                    • Total time: 9h 26m · 15.16 Total miles: <br>
+                    • HR Zones: Z1 341.75m ·Z2 103.75m · Z3 87.75m · Z4 22m · Z5 2.75m<br>
+                    • VO₂ Max: 42.8 → 45.2 · DOMS: One<br>
+                    • Theme: Absorb · Reset · Re-Engage (2 weeks to race day)
+                  </div>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Week 07 Focus</div>
+                    <p class="card-body">
+                    Week 7 Fresh, Fast, Ready for Rade day in 13 days.
+                    </p>
+                  </div>
+
+                  <div class="video-embed" style="margin-top: 12px;">
+                    <!-- Paste Synthesia Week 06 embed iframe below when ready -->
+                    <div class="video-embed">
+                     <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/aecf9647-ddf5-46fe-bd7e-0449d581d964" loading="lazy" title="Synthesia video player - Hyrox Week06 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+                    </div>
+                </div>
+              </div>
+            </article>
+            <!-- ====== END WEEK 06 ====== -->
+
+            <!-- ====== WEEK 05 CARD  ====== -->
             <article class="recap-card" data-week="2026-1-4">
               <div class="recap-meta">Week 05 · Dec 29, 2025 – Jan 4, 2026</div>
               <h2 class="recap-title">Absorb · Reset · Re-Engage</h2>
@@ -366,7 +416,8 @@ The result was a week that didn’t look dramatic on paper, but quietly moved th
 
         // Week selector logic
         const RECAP_WEEKS = [
-          { key: "2026-1-4", label: "Week 05 (Dec 29, 2025 – Jan 4, 2026)", default: true },  
+          { key: "2026-1-11", label: "Week 06 (jan 5 – Jan 11, 2026)", default: true },  
+          { key: "2026-1-4", label: "Week 05 (Dec 29, 2025 – Jan 4, 2026)" },  
           { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28, 2025)" },
           { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21, 2025)" },
           { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14, 2025)" },
